tests/auto/quick/qquicklistview/tst_qquicklistview.cpp
@@ -213,6 +213,8 @@ private slots:
     void outsideViewportChangeNotAffectingView();
     void testProxyModelChangedAfterMove();
 
+    void typedModel();
+
 private:
     template <class T> void items(const QUrl &source);
     template <class T> void changed(const QUrl &source);
@@ -6958,6 +6960,24 @@ void tst_QQuickListView::testProxyModelChangedAfterMove()
     QTRY_COMPARE(listview->count(), 3);
 
     delete window;
+}
+
+void tst_QQuickListView::typedModel()
+{
+    QQmlEngine engine;
+    QQmlComponent component(&engine, testFileUrl("typedModel.qml"));
+
+    QScopedPointer<QObject> object(component.create());
+
+    QQuickListView *listview = qobject_cast<QQuickListView *>(object.data());
+    QVERIFY(listview);
+
+    QCOMPARE(listview->count(), 6);
+
+    QQmlListModel *listModel = 0;
+
+    listview->setModel(QVariant::fromValue(listModel));
+    QCOMPARE(listview->count(), 0);
 }
 
 QTEST_MAIN(tst_QQuickListView)
